--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "akkajs-dom",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Akka.Js Dom framework extension",
   "author": "Andrea Peruffo",
   "license": "MIT",
@@ -14,12 +14,22 @@
   "scripts": {
     "start": "webpack --watch",
     "build": "webpack",
-    "prepublish": "webpack"
+    "prepublish": "webpack",
+    "fmt": "eslint --fix *.js"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-react-jsx": "latest",
+    "eslint": "^4.9.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-config-standard-jsx": "^4.0.2",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.2.0",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-standard": "^3.0.1",
     "webpack": "^3.5.6"
   },
   "repository": {
