--- a/demo/2-events/package.json
+++ b/demo/2-events/package.json
@@ -9,14 +9,14 @@
   "scripts": {
     "start": "webpack --watch",
     "build": "webpack",
-    "serve": "serve . -p 3000",
+    "serve": "lite-server",
     "fmt": "eslint --fix *.js"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-react-jsx": "latest",
-    "serve": "^6.1.0",
+    "lite-server": "^2.3.0",
     "webpack": "^3.5.6"
   }
 }
