--- a/demo/5-pingpong/package.json
+++ b/demo/5-pingpong/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "akkajs_dom_hierarchy",
+  "name": "akkajs_dom_pingpong",
   "version": "1.0.0",
   "author": "Andrea Peruffo",
   "license": "MIT",
-  "dependencies": {
-    "akkajs-dom": "latest"
-  },
   "scripts": {
     "start": "webpack --watch",
     "build": "webpack",
-    "serve": "lite-server",
+    "serve": "light-server -s . -p 3000",
     "fmt": "eslint --fix *.js"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-react-jsx": "latest",
-    "lite-server": "^2.3.0",
+    "light-server": "^2.5.1",
     "webpack": "^3.5.6"
   }
 }
