--- a/demo/2-events/package.json
+++ b/demo/2-events/package.json
@@ -16,6 +16,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-react-jsx": "latest",
+    "eslint": "^5.0.1",
     "lite-server": "^2.3.0",
     "webpack": "^3.5.6"
   }
