--- a/demo/6-logging/package.json
+++ b/demo/6-logging/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "akkajs_dom_todo",
+  "name": "akkajs_dom_logging",
   "version": "1.0.0",
   "author": "Andrea Peruffo",
   "license": "MIT",
-  "dependencies": {
-    "akkajs-dom": "latest"
-  },
   "scripts": {
     "start": "webpack --watch",
     "build": "webpack",
-    "serve": "lite-server",
+    "serve": "light-server -s . -p 3000",
     "fmt": "eslint --fix *.js"
   },
   "devDependencies": {
@@ -17,7 +14,7 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-react-jsx": "latest",
     "eslint": "^5.0.1",
-    "lite-server": "^2.3.0",
+    "light-server": "^2.5.1",
     "webpack": "^3.5.6"
   }
 }
