--- a/demo/7-ts-wip/package.json
+++ b/demo/7-ts-wip/package.json
@@ -18,6 +18,7 @@
     "ts-loader": "^4.4.1",
     "typescript": "^2.9.2",
     "webpack": "^4.12.2",
+    "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.0.8"
   }
 }
