--- a/demo/7-ts-wip/tsconfig.json
+++ b/demo/7-ts-wip/tsconfig.json
@@ -6,6 +6,8 @@
     "module": "es6",
     "target": "es5",
     "jsx": "preserve",
-    "allowJs": true
-  }
+    "allowJs": true,
+    "importHelpers": true
+  },
+  "include": ["./*", "../../*"]
 }
