saving a non working TX integration(vdom will not work ...)

--- a/demo/7-ts-wip/tsconfig.json
+++ b/demo/7-ts-wip/tsconfig.json
@@ -1,13 +1,15 @@
 {
   "compilerOptions": {
     "outDir": "./js/",
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "sourceMap": true,
     "module": "es6",
     "target": "es5",
     "jsx": "preserve",
     "allowJs": true,
-    "importHelpers": true
+    "importHelpers": true,
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true
   },
   "include": ["./*", "../../*"]
 }
