--- a/demo/7-ts/package.json
+++ b/demo/7-ts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "akkajs_dom_logging",
+  "name": "akkajs_dom_ts",
   "version": "1.0.0",
   "author": "Andrea Peruffo",
   "license": "MIT",
