--- a/demo/7-ts/package.json
+++ b/demo/7-ts/package.json
@@ -10,9 +10,8 @@
     "fmt": "eslint --fix *.js"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-react-jsx": "latest",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "eslint": "^5.0.1",
     "light-server": "^2.5.1",
     "ts-loader": "^4.4.1",
