--- a/demo/7-ts/tsconfig.json
+++ b/demo/7-ts/tsconfig.json
@@ -5,7 +5,7 @@
     "sourceMap": true,
     "module": "es6",
     "target": "es5",
-    "jsx": "react",
+    "jsx": "preserve",
     "allowJs": true,
     "importHelpers": true,
     "allowSyntheticDefaultImports": true,
