--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,5 @@ install:
   - npm install
 
 script:
-  - (cd demo/1-simple && npm install && npm run build)
-  - (cd demo/2-events && npm install && npm run build)
-  - (cd demo/3-hierarchy && npm install && npm run build)
-  - (cd demo/4-todo && npm install && npm run build)
-  - (cd demo/5-pingpong && npm install && npm run build)
-  - (cd demo/6-logging && npm install && npm run build)
-  - (cd demo/7-ts && npm install && npm run build)
-  - (cd demo/8-prime && npm install && npm run build)
+  - npm buildDemo
   - npm test
